k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: astraea
  labels:
    app.kubernetes.io/name: astraea
    app.kubernetes.io/component: namespace
